[tool.poetry]
name = "crossword-sat"
version = "0.99.0"
description = "Generate dense crosswords/word grids using SAT solvers"
authors = ["Alex Dainiak <dainiak@gmail.com>"]

[tool.ruff]
line-length = 120

[tool.ruff.lint]
select = ["E", "W", "F", "I", "B", "C4", "N"]
ignore = [
    "C901",  # too complex
]